update all link done

--- a/inis25-media/src/index.html
+++ b/inis25-media/src/index.html
@@ -135,75 +135,77 @@
   </main>
   <!-- End Navbar Mobile -->
 
-  <!-- Main Content -->
-  <section
-    class="w-full text-[#000086] relative flex flex-col justify-center items-center px-4 pt-20 pb-2 sm:pb-6 lg:pb-16">
-    <!-- Judul Utama -->
-    <div class="relative z-20 flex flex-col items-center justify-center mt-0 lg:mt-20 xl:mt-28">
-      <h1 class="shimmer-text text-[28px] sm:text-[38px] md:text-[40px] lg:text-[60px] xl:text-[72px] 
-           -translate-y-20 sm:-translate-y-28 md:-translate-y-20 
-           lg:-translate-y-28 xl:-translate-y-36 
-           font-pirata uppercase">
-        Media
-      </h1>
-    </div>
-    </div>
+<!-- Main Content -->
+<section
+  class="w-full text-[#000086] relative flex flex-col justify-center items-center px-4 pt-20 pb-2 sm:pb-6 lg:pb-16">
+  <!-- Judul Utama -->
+  <div class="relative z-20 flex flex-col items-center justify-center mt-0 lg:mt-20 xl:mt-28">
+    <h1 class="shimmer-text text-[28px] sm:text-[38px] md:text-[40px] lg:text-[60px] xl:text-[72px] 
+         -translate-y-20 sm:-translate-y-28 md:-translate-y-20 
+         lg:-translate-y-28 xl:-translate-y-36 
+         font-pirata uppercase">
+      Media
+    </h1>
+  </div>
+  </div>
 
-    <div
-      class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-[-40px] sm:mt-[-60px] md:mt-[-80px] lg:mt-[-100px] xl:mt-[-120px] w-full px-4 max-w-6xl">
-      <!-- Teaser  -->
-      <div class="flex flex-col items-center order-1 animate-teaser" style="animation-delay: 0.3s">
-        <div
-          class="bg-[#FFF0C9] text-[#8B5A2B] font-pirata text-2xl mb-4 px-6 py-2 rounded-full shadow-md transition select-none cursor-default">
-          Teaser
-        </div>
-        <div
-          class="w-full max-w-[480px] lg:max-w-[640px] aspect-video bg-gray-300 rounded-lg overflow-hidden shadow-md">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/o1xUr-5RWM0?si=aYk9Lid3XdltTE-Q"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-          </iframe>
-        </div>
+  <div
+    class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-[-40px] sm:mt-[-60px] md:mt-[-80px] lg:mt-[-100px] xl:mt-[-120px] w-full px-4 max-w-6xl">
+    <!-- Teaser  -->
+    <div class="flex flex-col items-center order-1 animate-teaser" style="animation-delay: 0.3s">
+      <div
+        class="bg-[#FFF0C9] text-[#8B5A2B] font-pirata text-2xl mb-4 px-6 py-2 rounded-full shadow-md transition select-none cursor-default">
+        Teaser
       </div>
-      <!-- Batang Tengah -->
-      <div class="relative z-20 flex justify-center items-center order-3 lg:order-2 min-h-[240px]">
-        <img src="./img/batang.png" alt="Batang Tengah"
-          class="absolute top-[24px] left-1/2 -translate-x-1/2 w-[80px] sm:w-[100px] md:w-[110px] lg:w-[120px] z-0" />
-        <div class="flex flex-col items-center space-y-4 z-10">
-          <a href="https://twibbon.example.com" target="_blank"
-            class="transform transition-all duration-300 ease-in-out hover:scale-[1.16] active:scale-[1.22] bg-[#8B5A2B] text-[#FFF0C9] font-pirata text-2xl px-6 py-2 rounded-full shadow-md hover:bg-[#FFF0C9] hover:text-[#8B5A2B] text-center">
-            Link Twibbon
-          </a>
-          <a href="https://yelyel.example.com" target="_blank"
-            class="transform transition-all duration-300 ease-in-out hover:scale-[1.16] active:scale-[1.22] bg-[#8B5A2B] text-[#FFF0C9] font-pirata text-2xl px-6 py-2 rounded-full shadow-md hover:bg-[#FFF0C9] hover:text-[#8B5A2B] text-center">
-            Link Yel-Yel
-          </a>
-          <a href="https://jargon.example.com" target="_blank"
-            class="transform transition-all duration-300 ease-in-out hover:scale-[1.16] active:scale-[1.22] bg-[#8B5A2B] text-[#FFF0C9] font-pirata text-2xl px-6 py-2 rounded-full shadow-md hover:bg-[#FFF0C9] hover:text-[#8B5A2B] text-center">
-            Link Jargon
-          </a>
-        </div>
-      </div>
-      <!-- Dance Jingle -->
-      <div class="flex flex-col items-center order-2 lg:order-3 animate-dance" style="animation-delay: 0.6s">
-        <div
-          class="bg-[#FFF0C9] text-[#8B5A2B] font-pirata text-2xl mb-4 px-6 py-2 rounded-full shadow-md transition select-none cursor-default">
-          Dance Jingle
-        </div>
-        <div
-          class="w-full max-w-[480px] lg:max-w-[640px] aspect-video bg-gray-300 rounded-lg overflow-hidden shadow-md">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/o1xUr-5RWM0?si=aYk9Lid3XdltTE-Q"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-          </iframe>
-        </div>
+      <div
+        class="w-full max-w-[480px] lg:max-w-[640px] aspect-video bg-gray-300 rounded-lg overflow-hidden shadow-md">
+        <iframe class="w-full h-full" src="https://www.youtube.com/embed/N0We6V_RpwM"
+          title="Teaser Video" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
       </div>
     </div>
+    <!-- Batang Tengah -->
+    <div class="relative z-20 flex justify-center items-center order-3 lg:order-2 min-h-[240px]">
+      <img src="./img/batang.png" alt="Batang Tengah"
+        class="absolute top-[24px] left-1/2 -translate-x-1/2 w-[80px] sm:w-[100px] md:w-[110px] lg:w-[120px] z-0" />
+      <div class="flex flex-col items-center space-y-4 z-10">
+        <a href="https://twibbo.nz/twibbon-inisiasi2025" target="_blank"
+          class="transform transition-all duration-300 ease-in-out hover:scale-[1.16] active:scale-[1.22] bg-[#8B5A2B] text-[#FFF0C9] font-pirata text-2xl px-6 py-2 rounded-full shadow-md hover:bg-[#FFF0C9] hover:text-[#8B5A2B] text-center">
+          Link Twibbon
+        </a>
+        <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTM2NDA5OTg0MDcwNjg3?story_media_id=3708895865701851322_5778876265&igsh=bm1tNHNodXdzc2cy"
+          target="_blank"
+          class="transform transition-all duration-300 ease-in-out hover:scale-[1.16] active:scale-[1.22] bg-[#8B5A2B] text-[#FFF0C9] font-pirata text-2xl px-6 py-2 rounded-full shadow-md hover:bg-[#FFF0C9] hover:text-[#8B5A2B] text-center">
+          Link Yel-Yel
+        </a>
+        <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTEwNzgyOTc1NTM0MTE3?story_media_id=3708888486713122324_5778876265&igsh=ZWtzbWFqMm4yMjBr"
+          target="_blank"
+          class="transform transition-all duration-300 ease-in-out hover:scale-[1.16] active:scale-[1.22] bg-[#8B5A2B] text-[#FFF0C9] font-pirata text-2xl px-6 py-2 rounded-full shadow-md hover:bg-[#FFF0C9] hover:text-[#8B5A2B] text-center">
+          Link Jargon
+        </a>
+      </div>
     </div>
-  </section>
-  <!-- End Main Content -->
+    <!-- Dance Jingle -->
+    <div class="flex flex-col items-center order-2 lg:order-3 animate-dance" style="animation-delay: 0.6s">
+      <div
+        class="bg-[#FFF0C9] text-[#8B5A2B] font-pirata text-2xl mb-4 px-6 py-2 rounded-full shadow-md transition select-none cursor-default">
+        Dance Jingle
+      </div>
+      <div
+        class="w-full max-w-[480px] lg:max-w-[640px] aspect-video bg-gray-300 rounded-lg overflow-hidden shadow-md">
+        <iframe class="w-full h-full" src="https://www.youtube.com/embed/c9AdN-tgxDU"
+          title="Dance Jingle Video" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
+<!-- End Main Content -->
 
   <!-- Footer -->
   <footer
